<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP140_AutoSequence" Id="{083bc4f8-9e13-4930-af98-57b5514a568c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP140_AutoSequence
VAR
	OP140_AutoSeq:INT;
	OP140_Leak_Test_1:OP140_LeakTesting;
	OP140_Leak_Test_2:OP140_LeakTesting;
	OP140_Leak_Test_3:OP140_LeakTesting;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (NOT OP140_Auto OR  OP140_ErrorActive OR OP140_HomeRunning ) THEN
	OP140_Main.OP140_Modeselection_FB.AutoRunning:= FALSE;
	OP140_ComponentOk:=FALSE;
	OP140_ComponentNok:=FALSE;
	OP140_AutoSeq:= 10;

END_IF

CASE OP140_AutoSeq OF 
	10:IF (OP140_Auto) THEN		// Check Automode Selected
		OP140_AutoSeq :=20;
	    END_IF
	20:IF ( NOT OP140_ErrorActive) THEN		//Check No error
		OP140_AutoSeq:=30;
	   END_IF
	30:IF (NOT OP140_HomeRunning) THEN		//Check No Homerunning
		OP140_AutoSeq :=40;
		END_IF
    40:IF (NOT OP140_Main.OP140_Modeselection_FB.TempHomeOK)THEN	//Check Machine in Home
		OP140_AutoSeq:= 50;
		END_IF
	50:IF ( NOT OP140_OperationCompleted) THEN		// Check Operation Completed Reset
		OP140_AutoSeq:=60;
		END_IF
	60:IF (NOT OP140_ComponentOk) THEN		// Check Component Ok Reset
		OP140_AutoSeq:=70;
		END_IF
	70:IF (NOT OP140_ComponentNok) THEN 	// Check Component NOk Reset
		OP140_AutoSeq:= 80;
		END_IF
    120:IF  (Automatic_Run OR (NOT Automatic_Run AND OP140_HMI_Cycle_Start )) THEN		//Machine Start in Fully Automatic or Press Cycle Start For Semi Automatic
		    OP140_Main.OP140_Modeselection_FB.HomeConditionOK:=TRUE;
	 			IF( OP140_Main.OP140_Modeselection_FB.HomeConditionOK AND OP140_AutoSelected) THEN
					OP140_Main.OP140_Modeselection_FB.AutoRunning:=TRUE;
					OP140_Main.OP140_Modeselection_FB.StepRunning:= FALSE;
				
				ELSIF (OP140_Main.OP140_Modeselection_FB.HomeConditionOK AND OP140_StepSelected) THEN
					OP140_Main.OP140_Modeselection_FB.AutoRunning:=FALSE;
					OP140_Main.OP140_Modeselection_FB.StepRunning:= TRUE;
				END_IF;
		 END_IF
		 IF ((OP140_Main.OP140_Modeselection_FB.AutoRunning OR OP140_Main.OP140_Modeselection_FB.StepRunning) AND OP140_Main.OP140_Modeselection_FB.StartEnable) THEN
					OP140_AutoSeq:= 130;
		END_IF
	130:IF (OP140_Prev_Stat_Operation_Completed=TRUE) THEN // Check Previous Station Completed
		             OP140_AutoSeq:= 140;
	END_IF
	140: IF (OP140_Prev_Comp_Status=1) THEN  // Check Compoent Status in Previuos Station
		OP140_Prev_LH_COMP_OK:=TRUE;
		OP140_Prev_RH_COMP_OK:=TRUE;
		OP140_LH_AutoSeq:=10;
		OP140_RH_AutoSeq:=10;
		ELSIF (OP140_Prev_Comp_Status=2)THEN 
		OP140_Prev_LH_COMP_NOK:=TRUE;
		OP140_Prev_RH_COMP_OK:=TRUE;
		OP140_LH_AutoSeq:=10;
		OP140_RH_AutoSeq:=10;
		ELSIF (OP140_Prev_Comp_Status=3)THEN 
		OP140_Prev_LH_COMP_OK:=TRUE;
		OP140_Prev_RH_COMP_NOK:=TRUE;
		OP140_LH_AutoSeq:=10;
		OP140_RH_AutoSeq:=10;
		ELSIF (OP140_Prev_Comp_Status=4)THEN 
		OP140_Prev_LH_COMP_NOK:=TRUE;
		OP140_Prev_RH_COMP_NOK:=TRUE;
		OP140_LH_AutoSeq:=10;
		OP140_RH_AutoSeq:=10;
		END_IF
		IF (OP140_Prev_LH_COMP_OK OR OP140_Prev_LH_COMP_NOK) AND (OP140_Prev_RH_COMP_OK OR OP140_Prev_RH_COMP_NOK) THEN
			 OP140_AutoSeq:= 150;
		END_IF
			
	150:IF OP140_Main.OP140_Modeselection_FB.StartEnable AND (OP140_Prev_LH_COMP_OK=TRUE) OR (OP140_Prev_RH_COMP_OK=TRUE) THEN
		OP140_Leak_Test_1.Seq_Start:=TRUE;
		OP140_Leak_Test_1.Step_No:=10;
		 OP140_AutoSeq:= 150;
		 END_IF
		 
	160:IF OP140_Leak_Test_1.Seq_Completed=TRUE THEN
		OP140_LH_Comp_OK:=OP140_Leak_Test_1.LH_Comp_OK;
		OP140_LH_Comp_NOK:=OP140_Leak_Test_1.LH_Comp_NOK;
		OP140_RH_Comp_OK:=OP140_Leak_Test_1.RH_Comp_OK;
		OP140_RH_Comp_NOK:=OP140_Leak_Test_1.RH_Comp_NOK;
		 OP140_AutoSeq:= 180;
				
	END_IF
	180:		// Reset All Bits							
         OP140_LH_Comp_OK:=FALSE;
         OP140_LH_Comp_NOK:=FALSE;
         OP140_RH_Comp_OK:=FALSE;
         OP140_RH_Comp_NOK:=FALSE;
         OP140_LH_AutoSeq:=0;
		OP140_RH_AutoSeq:=0;
		OP140_AutoSeq:= 10;
			
	

			
			
		
		

END_CASE]]></ST>
    </Implementation>
    <LineIds Name="OP140_AutoSequence">
      <LineId Id="3" Count="101" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>